setting home page images - fixing bug on mobile 3

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -16,12 +16,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("home/home-page-content-02.png");
+  background-image: asset-url("home/home-page-content-02.png", image);
   background-size: cover;
 }
 
 #home-image-1:hover {
-	background-image: url("home/home-page-content-01.png");
+	background-image: asset-url("home/home-page-content-01.png", image);
 }
 
 #home-image-2 {
@@ -30,10 +30,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("home/home-page-content-04.png");
+  background-image: asset-url("home/home-page-content-04.png", image);
   background-size: cover;
 }
 
 #home-image-2:hover {
-	background-image: url("home/home-page-content-03.png");
+	background-image: asset-url("home/home-page-content-03.png", image);
 }
